--- a/Client/garagespotter/src/pages/Home/map/mapSidebar/mapsidebar.module.scss
+++ b/Client/garagespotter/src/pages/Home/map/mapSidebar/mapsidebar.module.scss
@@ -21,7 +21,7 @@
     .containerForSpots {
         
         width: 100%;
-        height: 90px;
+        min-height: 90px;
         margin-top: 5px;
         margin-bottom: 5px;
         display: flex;
@@ -29,7 +29,7 @@
         align-items: center;
         flex-wrap: wrap;
         img{
-            height: 50%;
+            height: 45px;
         }
     }
     &.open {
