--- a/Client/garagespotter/src/pages/Reservations/reservations.module.scss
+++ b/Client/garagespotter/src/pages/Reservations/reservations.module.scss
@@ -19,6 +19,10 @@
             border-radius: $border-radius;
             cursor: pointer;
             transition: background-color $transition-default;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 3px;
 
             &.active {
                 background-color: $primary-color;
