--- a/Client/garagespotter/src/components/Modals/ReservationModal/reservationsmodal.module.scss
+++ b/Client/garagespotter/src/components/Modals/ReservationModal/reservationsmodal.module.scss
@@ -13,7 +13,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: $z-index-modal;
+    z-index: $z-index-modal +10;
     backdrop-filter: blur(5px); // Softens background with blur
     animation: fadeIn 0.3s ease-in-out; // Smooth fade-in animation
 }
